force-app/main/default/objects/clariti__Phase_Criteria_Settings__mdt/clariti__Phase_Criteria_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings to specify phase and status values of payable objects.</description>
    <label>Phase Criteria Settings</label>
    <pluralLabel>Phase Criteria Settings</pluralLabel>
</CustomObject>