force-app/main/default/objects/clariti__Phase_Criteria_Settings__mdt/fields/clariti__Object_Balance_Settings__c.field-meta.xml
<CustomField>
    <fullName>clariti__Object_Balance_Settings__c</fullName>
    <description>Mapping to associated balance settings.</description>
    <inlineHelpText>Mapping to associated balance settings.</inlineHelpText>
    <label>Object Balance Settings</label>
    <referenceTo>clariti__Object_Balance_Settings__mdt</referenceTo>
    <relationshipLabel>Phase Criteria Settings</relationshipLabel>
    <relationshipName>Phase_Criteria_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>