force-app/main/default/objects/clariti__Phase_Criteria_Settings__mdt/fields/clariti__Phase__c.field-meta.xml
<CustomField>
    <fullName>clariti__Phase__c</fullName>
    <description>Specify the phase to be used as a filter criteria for balance calculation.</description>
    <inlineHelpText>Specify the phase to be used as a filter criteria for balance calculation.</inlineHelpText>
    <label>Phase</label>
    <length>80</length>
    <type>Text</type>
</CustomField>