force-app/main/default/objects/clariti__Phase_Criteria_Settings__mdt/fields/clariti__Statuses__c.field-meta.xml
<CustomField>
    <fullName>clariti__Statuses__c</fullName>
    <description>Specify the statuses for the phase to be used as a filter criteria for balance calculation.</description>
    <inlineHelpText>Specify the statuses for the phase to be used as a filter criteria for balance calculation.</inlineHelpText>
    <label>Statuses</label>
    <length>80</length>
    <type>Text</type>
</CustomField>